--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
                                 <a href=".." class="nav-link">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a href="../intro/" class="nav-link">Intro</a>
+                                <a href="../prolog/" class="nav-link">Prolog</a>
                             </li>
                             <li class="nav-item">
                                 <a href="./" class="nav-link active" aria-current="page">About</a>
@@ -52,7 +52,7 @@
                             </a>
                         </li>
                             <li class="nav-item">
-                                <a rel="prev" href="../intro/" class="nav-link">
+                                <a rel="prev" href="../prolog/" class="nav-link">
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
